--- a/app/src/main/res/layout/activity_play_game.xml
+++ b/app/src/main/res/layout/activity_play_game.xml
@@ -10,15 +10,17 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="case2.iths.com.QuizGame.PlayGameActivity">
+        tools:context="case2.iths.com.QuizGame.PlayGameActivity"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
-            android:id="@+id/topTextView"
+            android:id="@+id/topTextView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/lobster_two_bold"
             android:text="@string/app_name"
             android:textAlignment="center"
@@ -34,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="15dp"
             android:layout_marginBottom="16dp"
+            android:fontFamily="sans-serif"
             android:text="@string/developed_by"
             android:textColor="@color/ButtonBackground"
             app:layout_constraintBottom_toBottomOf="parent"
