--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -55,6 +55,7 @@
 
     <Button
         android:id="@+id/multiplayerButton2"
+        android:onClick="toGame"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
