--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -9,11 +9,11 @@
 
     <Button
         android:id="@+id/button_handle_question"
+        android:onClick="toManageQuestions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@color/ButtonBackground"
-        android:onClick="toHandleQuestions"
         android:text="@string/manage_questions"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
@@ -25,6 +25,7 @@
 
     <Button
         android:id="@+id/button_multiplayer"
+        android:onClick="toMultiplayerGame"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -40,11 +41,11 @@
 
     <Button
         android:id="@+id/button_singelplayer"
+        android:onClick="toSingelGame"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:background="@color/ButtonBackground"
-        android:onClick="toGame"
         android:text="@string/singelplayer"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
@@ -81,6 +82,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </android.support.constraint.ConstraintLayout>
