--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -42,6 +42,7 @@
         android:layout_marginTop="50dp"
         android:background="@color/ButtonBackground"
         android:elevation="0dp"
+        android:onClick="toTheProfile"
         android:text="@string/profile"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
