--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/lobster_two_bold"
-        android:text="@string/higscore"
+        android:text="@string/highscore"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="40sp"
