--- a/app/src/main/res/layout/activity_create_statements.xml
+++ b/app/src/main/res/layout/activity_create_statements.xml
@@ -8,26 +8,13 @@
     tools:context="case2.iths.com.QuizGame.CreateQuestionActivity">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="218dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Add category to question"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_text_create" />
-
-    <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/add_text"
         android:layout_width="218dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Add text to question"
+        android:text="@string/add_statement"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/gameField_add_question"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,15 +24,13 @@
         android:id="@+id/spinner_add_category"
         android:layout_width="344dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginBottom="25dp"
         android:background="@null"
         android:spinnerMode="dialog"
-        app:layout_constraintBottom_toTopOf="@+id/textView1"
+        app:layout_constraintBottom_toTopOf="@+id/add_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/gameField_add_question"
@@ -133,7 +118,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/lobster_two_bold"
-        android:text="Create Question"
+        android:text="@string/create_statement"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="40sp"
@@ -141,5 +126,25 @@
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/choose_true_false"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/statement_true_false"
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="417dp" />
+
+    <TextView
+        android:id="@+id/choose_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/choose_category"
+        app:layout_constraintBottom_toTopOf="@+id/spinner_add_category"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
