--- a/app/src/main/res/layout/activity_create_statements.xml
+++ b/app/src/main/res/layout/activity_create_statements.xml
@@ -133,9 +133,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/statement_true_false"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gameField_add_statement"/>
+        app:layout_constraintTop_toBottomOf="@+id/gameField_add_statement" />
 
     <TextView
         android:id="@+id/choose_category"
