--- a/app/src/main/res/layout/activity_edit_statement.xml
+++ b/app/src/main/res/layout/activity_edit_statement.xml
@@ -8,6 +8,35 @@
     tools:context="case2.iths.com.QuizGame.EditStatementActivity">
 
     <TextView
+        android:id="@+id/top_text_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/lobster_two_bold"
+        android:text="@string/edit_statement"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/choose_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/edit_category"
+        app:layout_constraintBottom_toTopOf="@+id/spinner_edit_category"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
         android:id="@+id/edit_text"
         android:layout_width="218dp"
         android:layout_height="wrap_content"
@@ -69,7 +98,7 @@
             android:checked="false"
             android:text="sant"
             android:textOff="Sant"
-            android:onClick="onButtonTrueClicked"
+            android:onClick="editButtonTrueClicked"
             android:textOn="Sant"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -84,7 +113,7 @@
             android:layout_margin="8dp"
             android:background="@drawable/button_shape"
             android:text="falskt"
-            android:onClick="onButtonFalseClicked"
+            android:onClick="editButtonFalseClicked"
             android:textOff="Falskt"
             android:textOn="Falskt"
             android:textSize="20sp"
@@ -101,7 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
         android:background="@color/ButtonBackground"
-        android:onClick="onButtonEditClicked"
+        android:onClick="editButtonEditClicked"
         android:text="@string/Edit"
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
@@ -112,21 +141,15 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/top_text_edit"
+        android:id="@+id/developed_by_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/lobster_two_bold"
-        android:text="@string/edit_statement"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="40sp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/developed_by"
+        android:textColor="@color/ButtonBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/choose_true_false"
@@ -137,17 +160,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gameField_edit_statement" />
-
-    <TextView
-        android:id="@+id/choose_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/edit_category"
-        app:layout_constraintBottom_toTopOf="@+id/spinner_edit_category"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
