--- a/app/src/main/res/layout/dropdown_list_item.xml
+++ b/app/src/main/res/layout/dropdown_list_item.xml
@@ -9,9 +9,11 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="49dp"
-        android:background="#FEA3A3"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@color/colorPrimaryDark"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
